# XinQiao

./: README.md
ServerApplication/: CMakeLists.txt  CMakeSettings.json  main.cpp
ServerApplication/head/: main.h
ServerApplication/head/DataBase/: DataBase.cpp  DataBase.h
ServerApplication/head/FileIO/: FileIo.cpp  FileIo.h
ServerApplication/head/PdChat/: PdChat206.cpp  PdChat206.h
ServerApplication/head/PdSdk/: Pd.cpp  Pd.h  SearchAlgorithm.h  SqList.h
XinQiao/Code/CustomControlH/: imagelabel.cpp  imagelabel.h
XinQiao/Code/FileIo/: FileIo.h
XinQiao/Code/Main/: main.cpp  main.h
XinQiao/Code/PdChat206/: PdChat206.cpp  PdChat206.h
XinQiao/Code/PdSdk/: Pd.cpp  Pd.h  SearchAlgorithm.h  SqList.h  WinPd.h
XinQiao/Code/Server/: Server.cpp  Server.h
XinQiao/Code/Transfer/: Transfer.cpp  Transfer.h
XinQiao/Code/UI/AddFriend/: addfirend.cpp  addfirend.h  addfirend.ui
XinQiao/Code/UI/LogIn/: Animation.h  LogIn.cpp  LogIn.h  LogIn.ui
XinQiao/Code/UI/Manager/: Manager.cpp  Manager.h
XinQiao/Code/UI/Message/: message.cpp  message.h  message.ui
XinQiao/Code/UI/Mnue/: mnue.cpp  mnue.h  mnue.ui
XinQiao/Code/UI/Setting/: setting.cpp  setting.h  setting.ui
XinQiao/Code/UI/Sign/: sign.cpp  sign.h  sign.ui
XinQiao/Code/UI/SignalManager/: SignalManager.cpp  SignalManager.h
XinQiao/QtDesigner/: CMakeLists.txt
XinQiao/VsBuild/: XinQiao.sln  XinQiao.vcxproj  XinQiao.vcxproj.filters
